# E_com-Mart-Api

./: .gitignore
fastapi-helloworld/: compose.yaml  docker-compose.yml  pyproject.toml
fastapi-helloworld/Inventory_services/: .env  Dockerfile.dev  main.py
fastapi-helloworld/Inventory_services/app/model/: inventory_model.py
fastapi-helloworld/Product_services/: .env  Dockerfile.dev  database.db  main.py  model.py  pyproject.toml
fastapi-helloworld/Product_services/app/: db.py
fastapi-helloworld/notification_service/: .env  Dockerfile.dev  main.py  pyproject.toml
fastapi-helloworld/notification_service/app/db/: db.py
fastapi-helloworld/order_service/: .env  Dockerfile.dev  get_current.py  get_email.py  main.py  notification.py  pyproject.toml
fastapi-helloworld/order_service/app/model/: order_model.py
fastapi-helloworld/payment_service/: .env  Dockerfile.dev  get_email.py  get_payment.py  main.py  notification.py  pyproject.toml
fastapi-helloworld/payment_service/app/: model.py
fastapi-helloworld/user_services/: .env  Dockerfile.dev  auth.py  main.py  model.py  notification.py  pyproject.toml  read_data.py
fastapi-helloworld/user_services/app/: db.py
fastapi-helloworld/user_services/router/: user.py
fastapi-helloworld/z_realtime_service/: .env  Dockerfile.dev  main.py  notification.py  pyproject.toml
fastapi-helloworld/z_realtime_service/app/db/: db.py
fastapi-helloworld/z_realtime_service/app/model/: model.py
